<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="slogan">Think Fast, Play Smart!</string>
    <string name="name">Enter Player names</string>
    <string name="startgame">Start Game</string>
    <string name="player1">Player One</string>
    <string name="player2">Player Two</string>
    <string name="button">Button</string>
    <string name="score_0">Score: 0</string>
    <string name="winner_announcement">Winner Announcement</string>
    <string name="ok">Ok</string>
    <string name="rounds">Rounds</string>
    <string name="status">Status</string>
    <string name="result_whoose_won_round">Result whoose won round</string>
    <string name="round_winner">Round Winner</string>
    <string name="player_x">Player X</string>
    <string name="player_o">Player O</string>
</resources>