<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blunishPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@color/blunishPurple"
            android:text="@string/round_winner"
            android:textColor="@color/white"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="normal"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/blunishPurple"
            android:text="@string/result_whoose_won_round"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="65dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:background="@color/blunishPurple"
            android:textColor="@color/white"
            android:text="@string/ok"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>