<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".homeActivity">

    <TextView
        android:id="@+id/texttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playerXname"
        android:layout_width="344dp"
        android:layout_height="64dp"
        android:paddingStart="70dp"
        android:layout_marginTop="44dp"
        android:hint="@string/player1"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:background="@color/blunishPurple"
        app:layout_constraintEnd_toEndOf="@+id/texttitle"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/texttitle"
        app:layout_constraintTop_toBottomOf="@+id/texttitle"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/letter_x"
        android:backgroundTint="@color/crossRed"
        app:layout_constraintBottom_toBottomOf="@+id/playerXname"
        app:layout_constraintStart_toStartOf="@+id/playerXname"
        app:layout_constraintTop_toTopOf="@+id/playerXname" />

    <EditText
        android:id="@+id/round"
        android:layout_width="344dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:background="@color/blunishPurple"
        android:hint="@string/rounds"
        android:paddingStart="70dp"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/playerOname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/playerOname"
        app:layout_constraintTop_toBottomOf="@+id/playerOname"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/playerOname"
        android:layout_width="344dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@color/blunishPurple"
        android:hint="@string/player2"
        android:paddingStart="70dp"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/playerXname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/playerXname"
        app:layout_constraintTop_toBottomOf="@+id/playerXname"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/letter_o"
        app:layout_constraintBottom_toBottomOf="@+id/playerOname"
        app:layout_constraintStart_toStartOf="@+id/playerOname"
        app:layout_constraintTop_toTopOf="@+id/playerOname" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/round"
        app:layout_constraintStart_toStartOf="@+id/round"
        app:layout_constraintTop_toTopOf="@+id/round" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_margin="35dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/roundbtn"
        android:text="@string/startgame"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round" />

</androidx.constraintlayout.widget.ConstraintLayout>